# camera_trigger

./: CMakeLists.txt  package.xml
launch/: fisheye.launch
src/: image_publisher.cpp  image_viewer.cpp  trigger.cpp
